Added osu and removed Under construction msg

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head></head>
-  <body>
-    <h2>Under construction!</h2>
-  </body>
+    <head></head>
+    <body>
+        <h2 style="text-align: center">This is Ale111Ale's website</h2>
+        <h3>My osu:</h3>
+        <p>https://osu.ppy.sh/users/35310765/fruits</p>
+    </body>
 </html>
