Added stylesheet, used dark mode by default and enabled system fonts

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="style.css" />
+    </head>
     <body>
         <h2 style="text-align: center">This is Ale111Ale's website</h2>
         <h3>My osu:</h3>
