--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     </head>
     <body>
         <h2 style="text-align: center">This is Ale111Ale's website</h2>
-        <h3>My osu:</h3>
-        <p>https://osu.ppy.sh/users/35310765/fruits</p>
+        <a href="https://osu.ppy.sh/users/35310765/fruits">My osu!catch</a>
     </body>
 </html>
