--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     </head>
     <body>
         <h2 style="text-align: center">This is Ale111Ale's website</h2>
-        <h1>I AM NOW top #50 000</h1>
+        <h3 style="text-align: center">My osu!catch profile:</h3>
         <h1>
-            <a href="https://osu.ppy.sh/users/35310765/fruits">My osu!catch</a>
+            <a href="https://osu.ppy.sh/users/35310765/fruits">
+                <img id="imgosu" src="osu.jpg" width="474" height="474" />
+            </a>
         </h1>
     </body>
 </html>
